update: clear comment and add delete users features
